[Add] Implement password management features with routing and form handling

--- a/src/app/password-list/password-list.component.html
+++ b/src/app/password-list/password-list.component.html
@@ -1,1 +1,91 @@
-<p>password-list works!</p>
+<div class="container mx-auto px-4 md:px-8 lg:px-16">
+  <p
+    *ngIf="isSuccess"
+    class="font-semibold bg-blue-300 text-white p-2 rounded-lg m-2"
+  >
+    Data Saved Successfully
+  </p>
+  <div
+    class="px-16 py-10 border-2 my-5 mx-auto rounded-2xl grid grid-cols-1 md:grid-cols-2 gap-4"  
+  >
+    <img
+      class="rounded-lg w-[460px] m-auto"
+      [src]="siteData.siteImgURL"
+      alt="site"
+    />
+    <div>
+      <h1 class="text-3xl font-bold p-3 text-center">
+        {{ state }} Usernames and Password
+      </h1>
+      <form [formGroup]="siteForm" (ngSubmit)="onSubmit()">
+        <div class="flex flex-col">
+          <label for="username" class="text-2xl font-bold m-2"
+            >User Name:</label
+          >
+          <input
+            type="text"
+            formControlName="username"
+            name="username"
+            class="border-2 rounded-lg p-2 m-2"
+            placeholder="Enter Username"
+          />
+        </div>
+        <div class="flex flex-col">
+          <label for="email" class="text-2xl font-bold m-2">Email:</label>
+          <input
+            type="text"
+            name="email"
+            class="border-2 rounded-lg p-2 m-2"
+            placeholder="Enter email"
+            formControlName="email"
+          />
+        </div>
+        <div class="flex flex-col">
+          <label for="password" class="text-2xl font-bold m-2">password</label>
+          <input
+            type="text"
+            name="password"
+            class="border-2 rounded-lg p-2 m-2"
+            placeholder="Enter password"
+            formControlName="password"
+            required
+          />
+        </div>
+        <button
+          class="p-2 m-2 bg-gray-900 text-white font-semibold cursor-pointer"
+        >
+          {{ state }} Password
+        </button>
+      </form>
+    </div>
+  </div>
+  <table class="table-auto overflow-x-auto w-full border-2 border-gray-900 rounded-lg">
+    <thead class="bg-gray-900 text-white">
+      <tr>
+        <th class="border px-4 py-2">User Name</th>
+        <th class="border px-4 py-2">Email</th>
+        <th class="border px-4 py-2">Password</th>
+        <th class="border px-4 py-2">Action</th>
+      </tr>
+    </thead>
+    <tbody *ngIf="length > 0">
+        <tr  *ngFor="let item of credentials | async" class="border-t hover:bg-gray-100">
+          <td class="px-4 py-2 break-words">{{ item.email }}</td>
+          <td class="px-4 py-2 break-words">{{ item.username }}</td>
+          <td class="px-4 py-2 break-words">{{ item.password }}</td>
+          <td class="px-4 py-2 break-words">
+            <button
+              (click)="onDelete(item.id)"
+              class="bg-gray-900 text-white px-4 py-2 rounded-lg"
+            >
+              Edit
+            </button>
+            <button
+              (click)="onEdit(item.id,item.username,item.email,item.password)"
+              class="bg-gray-900 text-white px-4 py-2 rounded-lg">
+              Delete
+            </button>
+        </tr>
+      </tbody>
+  </table>
+</div>
