--- a/src/app/password-list/password-list.component.html
+++ b/src/app/password-list/password-list.component.html
@@ -31,16 +31,6 @@
           />
         </div>
         <div class="flex flex-col">
-          <label for="email" class="text-2xl font-bold m-2">Email:</label>
-          <input
-            type="text"
-            name="email"
-            class="border-2 rounded-lg p-2 m-2"
-            placeholder="Enter email"
-            formControlName="email"
-          />
-        </div>
-        <div class="flex flex-col">
           <label for="password" class="text-2xl font-bold m-2">password</label>
           <input
             type="text"
@@ -59,33 +49,28 @@
       </form>
     </div>
   </div>
-  <table class="table-auto overflow-x-auto w-full border-2 border-gray-900 rounded-lg">
-    <thead class="bg-gray-900 text-white">
-      <tr>
-        <th class="border px-4 py-2">User Name</th>
-        <th class="border px-4 py-2">Email</th>
-        <th class="border px-4 py-2">Password</th>
-        <th class="border px-4 py-2">Action</th>
-      </tr>
-    </thead>
-    <tbody *ngIf="length > 0">
-        <tr  *ngFor="let item of credentials | async" class="border-t hover:bg-gray-100">
-          <td class="px-4 py-2 break-words">{{ item.email }}</td>
-          <td class="px-4 py-2 break-words">{{ item.username }}</td>
-          <td class="px-4 py-2 break-words">{{ item.password }}</td>
-          <td class="px-4 py-2 break-words">
-            <button
-              (click)="onDelete(item.id)"
-              class="bg-gray-900 text-white px-4 py-2 rounded-lg"
-            >
-              Edit
-            </button>
-            <button
-              (click)="onEdit(item.id,item.username,item.email,item.password)"
-              class="bg-gray-900 text-white px-4 py-2 rounded-lg">
-              Delete
-            </button>
-        </tr>
-      </tbody>
-  </table>
+  <div class="grid grid-cols-3 border-2">
+    <h1 class=" text-center font-bold border-2 italic p-2">User Name</h1>
+    <h1 class=" text-center font-bold border-2 italic p-2">Password</h1>
+    <h1 class=" text-center font-bold border-2 italic p-2">Actions</h1>
+  </div>
+  <div *ngIf="length > 0">
+    <div class="grid grid-cols-3  border-2" *ngFor="let credential of credentials | async">
+      <h1 class=" text-center border-2 p-2">{{ credential.username }}</h1>
+      <p class=" text-center border-2 p-2">{{ credential.password }}</p>
+      <div class="border-2 text-center">
+        <button
+        (click)="onEdit(credential.id,credential.username,credential.password)"
+        class="bg-gray-900 text-white p-2 rounded-lg   cursor-pointer mr-2"
+      >
+       Edit 
+      </button> <button
+      (click)="onDelete(credential.id)"
+      class="bg-gray-900 text-white p-2 rounded-lg   cursor-pointer"
+    >
+      Delete
+    </button>
+      </div>
+    </div>
+  </div>
 </div>
