[Add] Integrate FontAwesome icons and implement password encryption/decryption features

--- a/src/app/password-list/password-list.component.html
+++ b/src/app/password-list/password-list.component.html
@@ -6,7 +6,7 @@
     Data Saved Successfully
   </p>
   <div
-    class="px-16 py-10 border-2 my-5 mx-auto rounded-2xl grid grid-cols-1 md:grid-cols-2 gap-4"  
+    class="px-16 py-10 border-2 my-5 mx-auto rounded-2xl grid grid-cols-1 md:grid-cols-2 gap-4"
   >
     <img
       class="rounded-lg w-[460px] m-auto"
@@ -42,34 +42,63 @@
           />
         </div>
         <button
-          class="p-2 m-2 bg-gray-900 text-white font-semibold cursor-pointer"
+          class="p-2 m-2 bg-gray-900 text-white font-semibold cursor-pointer  rounded-lg"
         >
           {{ state }} Password
         </button>
       </form>
     </div>
   </div>
-  <div class="grid grid-cols-3 border-2">
-    <h1 class=" text-center font-bold border-2 italic p-2">User Name</h1>
-    <h1 class=" text-center font-bold border-2 italic p-2">Password</h1>
-    <h1 class=" text-center font-bold border-2 italic p-2">Actions</h1>
-  </div>
-  <div *ngIf="length > 0">
-    <div class="grid grid-cols-3  border-2" *ngFor="let credential of credentials | async">
-      <h1 class=" text-center border-2 p-2">{{ credential.username }}</h1>
-      <p class=" text-center border-2 p-2">{{ credential.password }}</p>
-      <div class="border-2 text-center">
+  <div *ngIf="credentials.length > 0">
+    <div class="p-4 bg-gray-800" *ngFor="let credential of credentials">
+      <div class="grid grid-cols-2 w-full border border-b-cyan-700">
+        <div class="flex flex-col p-4 m-2">
+          <h1 class="font-semibold text-amber-50 mb-2">User Name:</h1>
+          <p class="w-full shadow-lg rounded-lg p-2 font-semibold bg-gray-500">
+            {{ credential.username }}
+          </p>
+        </div>
+        <div class="flex flex-col p-4 m-2">
+          <h1 class="font-semibold text-amber-50 mb-2">Password:</h1>
+          <div class=" flex justify-between  bg-gray-500 rounded-lg" >
+            <p class="w-full shadow-lg  p-2 font-semibold mr-3" *ngIf="showPassword; else hidePassword">
+              {{ credential.password }} 
+            </p>
+            <ng-template #hidePassword>
+              <p class="w-full shadow-lg  p-2 font-semibold  text-white mr-3">
+                {{ '*'.repeat(credential.password.length) }}
+              </p>
+            </ng-template>
+            <div class="flex items-center text-white text-xl">
+              <p class="text-white text-xl  cursor-pointer mr-4" *ngIf="!showPassword" (click)="togglePasswordVisibility()">
+                <fa-icon [icon]="faEye"></fa-icon>
+              </p>
+              <p class="text-white text-xl  cursor-pointer mr-4" *ngIf="showPassword" (click)="togglePasswordVisibility()">
+                <fa-icon [icon]="faEyeSlash"></fa-icon>
+              </p>
+              <p class="text-white text-xl  cursor-pointer mr-4"  (click)="copyPassword(credential.password)">
+                <fa-icon [icon]="faPaste"></fa-icon>
+              </p>
+            </div>
+          </div>
+          </div>
+          
+      </div>
+      <div class="p-4 space-x-3">
         <button
-        (click)="onEdit(credential.id,credential.username,credential.password)"
-        class="bg-gray-900 text-white p-2 rounded-lg   cursor-pointer mr-2"
-      >
-       Edit 
-      </button> <button
-      (click)="onDelete(credential.id)"
-      class="bg-gray-900 text-white p-2 rounded-lg   cursor-pointer"
-    >
-      Delete
-    </button>
+          (click)="
+            onEdit(credential.id, credential.username, credential.password)
+          "
+          class="bg-gray-800 text-white px-4 py-2 rounded-lg border-sky-900 border-2 cursor-pointer"
+        >
+          Edit
+        </button>
+        <button
+          (click)="onDelete(credential.id)"
+          class="bg-gray-800 text-white px-4 py-2 rounded-lg border-sky-900 border-2 cursor-pointer"
+        >
+          Delete
+        </button>
       </div>
     </div>
   </div>
