--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,4 +1,4 @@
 <nav class="flex items-center justify-between p-4 m-2  shadow-2xl">
     <div class="text-3xl font-bold italic ">MyVault</div>
-    <a class="font-bold border-2 bg-gray-900 text-white rounded-lg p-2 cursor-pointer hover:text-gray-700" routerLink="/logout">Logout</a>
+    <a class="font-bold border-2 bg-black text-white rounded-lg p-2 cursor-pointer hover:rounded-full" (click)="logout()">Logout</a>
 </nav>
