--- a/src/app/viewsites/viewsites.component.html
+++ b/src/app/viewsites/viewsites.component.html
@@ -1,3 +1,4 @@
+<app-navbar></app-navbar>
 <div class="container mx-auto px-4 md:px-8 lg:px-16">
   <button
     class="bg-gray-900 text-white font-semibold px-4 p-2 border-2 rounded-lg"
