[Update] Replace old images with new assets, enhance navbar and views for better user experience, and improve form handling with success alerts and enhanced ui

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,7 +2,7 @@
   <div class="grid grid-cols-1 md:grid-cols-2 h-full p-8">
     
       <img
-      src="assets/3065018.jpg"
+      src="assets/main.jpg"
         class="w-[90%] h-[90%] object-cover rounded-2xl m-auto"
         alt="login image"
       />
