--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,4 +1,7 @@
-<nav class="flex items-center justify-between p-4 m-2  shadow-2xl">
-    <div class="text-3xl font-bold italic ">MyVault</div>
-    <a class="font-bold border-2 bg-black text-white rounded-lg p-2 cursor-pointer hover:rounded-full" (click)="logout()">Logout</a>
+<nav class="flex items-center justify-between p-2 m-1 shadow-2xl bg-[#222222] text-zinc-300">
+    <div class="text-lg font-bold italic ">MyVault</div>
+    <div class="flex items-center space-x-4">
+        <p class="font-semibold">Welcome </p>
+        <a class="border-2 bg-[#222222] rounded-lg p-2 cursor-pointer hover:rounded-xl mr-4" (click)="logout()">Logout</a>
+    </div>
 </nav>
