--- a/src/app/password-list/password-list.component.html
+++ b/src/app/password-list/password-list.component.html
@@ -1,5 +1,5 @@
 <app-navbar></app-navbar>
-<div class="container mx-auto px-4 md:px-8 lg:px-16">
+<div class="mx-auto p-4 h-full lg:px-16 bg-[#222222] text-zinc-300">
   <p
     *ngIf="isSuccess"
     class="font-semibold bg-blue-300 text-white p-2 rounded-lg m-2"
@@ -7,20 +7,20 @@
     Data Saved Successfully
   </p>
   <div
-    class="px-16 py-10 border-2 my-5 mx-auto rounded-2xl grid grid-cols-1 md:grid-cols-2 gap-4"
+    class="px-16 py-10 border-2 my-5 mx-auto rounded-2xl grid grid-cols-1 md:grid-cols-2 gap-4 h-full"
   >
     <img
       class="rounded-lg w-[460px] m-auto"
       [src]="siteData.siteImgURL"
       alt="site"
     />
-    <div>
+    <div class="p-10">
       <h1 class="text-3xl font-bold p-3 text-center">
         {{ state }} Usernames and Password
       </h1>
       <form [formGroup]="siteForm" (ngSubmit)="onSubmit()">
         <div class="flex flex-col">
-          <label for="username" class="text-2xl font-bold m-2"
+          <label for="username" class="italic m-2"
             >User Name:</label
           >
           <input
@@ -32,7 +32,7 @@
           />
         </div>
         <div class="flex flex-col">
-          <label for="password" class="text-2xl font-bold m-2">password</label>
+          <label for="password" class="italic m-2">password</label>
           <input
             type="text"
             name="password"
@@ -43,7 +43,7 @@
           />
         </div>
         <button
-          class="p-2 m-2 bg-gray-900 text-white font-semibold cursor-pointer  rounded-lg"
+          class="p-2 m-2 bg-[#222222]  text-white font-semibold cursor-pointer border-sky-300 border rounded-lg"
         >
           {{ state }} Password
         </button>
@@ -51,8 +51,8 @@
     </div>
   </div>
   <div *ngIf="credentials.length > 0">
-    <div class="p-4 bg-gray-800" *ngFor="let credential of credentials">
-      <div class="grid grid-cols-2 w-full border border-b-cyan-700">
+    <div class="p-4 bg-[#222222]" *ngFor="let credential of credentials">
+      <div class="grid grid-cols-2 w-full border">
         <div class="flex flex-col p-4 m-2">
           <h1 class="font-semibold text-amber-50 mb-2">User Name:</h1>
           <p class="w-full shadow-lg rounded-lg p-2 font-semibold bg-gray-500">
@@ -90,13 +90,13 @@
           (click)="
             onEdit(credential.id, credential.username, credential.password)
           "
-          class="bg-gray-800 text-white px-4 py-2 rounded-lg border-sky-900 border-2 cursor-pointer"
+          class="bg-[#222222] text-white px-4 py-2 rounded-lg border-sky-300 border-2 cursor-pointer"
         >
           Edit
         </button>
         <button
           (click)="onDelete(credential.id)"
-          class="bg-gray-800 text-white px-4 py-2 rounded-lg border-sky-900 border-2 cursor-pointer"
+          class="bg-[#222222] text-white px-4 py-2 rounded-lg border-sky-300 border-2 cursor-pointer"
         >
           Delete
         </button>
