[Update] navbar and views for improved layout and user experience; enhance styling for better visual appeal

--- a/src/app/password-list/password-list.component.html
+++ b/src/app/password-list/password-list.component.html
@@ -1,5 +1,5 @@
 <app-navbar></app-navbar>
-<div class="mx-auto p-4 h-full lg:px-16 bg-[#222222] text-zinc-300">
+<div class="mx-auto p-4 min-h-screen lg:px-16 bg-[#222222] text-zinc-300">
   <p
     *ngIf="isSuccess"
     class="font-semibold bg-blue-300 text-white p-2 rounded-lg m-2"
