--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -2,6 +2,7 @@
     <div class="text-lg font-bold italic ">MyVault</div>
     <div class="flex items-center space-x-4">
         <p class="font-semibold">Welcome </p>
+        <a class="border-2 bg-[#222222] rounded-lg p-2 cursor-pointer hover:rounded-xl mr-4" routerLink="/">Home</a>
         <a class="border-2 bg-[#222222] rounded-lg p-2 cursor-pointer hover:rounded-xl mr-4" (click)="logout()">Logout</a>
     </div>
 </nav>
