--- a/src/app/viewsites/viewsites.component.html
+++ b/src/app/viewsites/viewsites.component.html
@@ -1,7 +1,7 @@
 <app-navbar></app-navbar>
-<div class="mx-auto p-4 h-full lg:px-16 bg-[#222222] text-zinc-300">
-  <div class="px-16 py-10 border-2 my-5 mx-auto rounded-2xl grid grid-cols-1 md:grid-cols-2 gap-4 h-full">
-    <img class="rounded-lg w-[460px] m-auto" src="assets/main.jpg" alt="site">
+<div class="mx-auto p-4  min-h-screen lg:px-16 bg-[#222222] text-zinc-300">
+  <div class="px-16 py-10 my-5 mx-auto rounded-full grid grid-cols-1 md:grid-cols-2 gap-4 h-full">
+    <img class=" rounded-full w-[460px] m-auto" src="assets/main.jpg" alt="site">
     <div class="p-4 m-auto flex flex-col items-center">
       <h1 class="line text-2xl/7 italic mb-3">This project is a secure password manager that allows users to store, retrieve, and manage their passwords in an encrypted format. It features user authentication, strong encryption for data protection, and a simple, user-friendly interface. The goal is to provide a safe and efficient way to manage multiple credentials without compromising security.</h1>
       <button
@@ -60,16 +60,16 @@
   </div>
 
   <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-3 p-4" *ngIf="allSites.length >0">
-    <div class="rounded-lg shadow-lg flex flex-col gap-4 p-4 w-95 sm:w-75  border-2 m-auto" *ngFor="let site of allSites ">
+    <div class="rounded-xl flex flex-col gap-4 p-4 w-95 sm:w-75  border-2 m-auto" *ngFor="let site of allSites ">
       <img
         [src]="site.siteImgURL"
         alt="site"
         class="rounded-lg shadow-lg p-2 w-full"
       />
-      <p class="font-bold">Name:</p>
+      <p class="font-bold underline decoration-red-500 italic">Name:</p>
       <h2 class="text-2xl font-semibold italic">{{site.siteName}}</h2>
-      <p class="font-bold">Site:</p>
-      <a class="font-semibold text-xl cursor-pointer rounded-lg underline decoration-red-500" [href]="site.siteURL"
+      <p class="underline decoration-red-500 italic font-bold">URL:</p>
+      <a class="font-semibold text-xl cursor-pointer rounded-lg underline decoration-amber-200 italic shadow-md" [href]="site.siteURL"
         >{{site.siteURL}}</a
       >
       <div class="flex justify-center gap-2 items-center">
